--- a/mi/css/tuangoujrx.css
+++ b/mi/css/tuangoujrx.css
@@ -55,25 +55,25 @@
 	}
 	.header .header-logo{
 		float: left;
-		/*width: 150px;*/
+		width: 150px;
 		height: 55px;
 		margin-top: 22px;
-		background: #ff6700;
 	}
 	.header .header-logo .logo{
+		float: left;
 		display: block;
 		width: 55px;
 		height: 100%;
-		background-image: url(../images/logo.png);
-		background-repeat: no-repeat;
-		background-position: 50% 50%;
+		background:  #ff6700 url(../images/logo.png) 50% 50% no-repeat;
 		text-indent: -999em;
 	}
 	.header .header-logo .qiyelogo{
+		float: left;
 		display: block;
-		/*width: 95px;*/
-		height: 100px;
-		line-height: 100px;
+		width: 67px;
+		height: 50px;
+		margin-left: 15px;
+		background: url(../images/qiyelogo.png) 50% 50% no-repeat;
 	}
 	.header .header-nav{
 		float: left;
@@ -144,7 +144,16 @@
 
 .home{
 	height: 700px;
-	background: purple;
+	/*background: purple;*/
+}
+.home .banner a{
+	display: block;
+	width: 1226px;
+	height: 460px;
+}
+.home .banner a img{
+	width: 100%;
+	height: 100%;
 }
 .main{
 	height: 4000px;
