--- a/mi/css/tuangoujrx.css
+++ b/mi/css/tuangoujrx.css
@@ -146,14 +146,98 @@
 	height: 700px;
 	/*background: purple;*/
 }
-.home .banner a{
-	display: block;
-	width: 1226px;
+.home .banner{
+	position: relative;
+	margin-bottom: 14px;
+}
+.home .sider{
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	width: 296px;
 	height: 460px;
 }
-.home .banner a img{
+.home .sider .top{
 	width: 100%;
-	height: 100%;
+	height: 127px;
+	background: rgba(20,20,20,0.6);
+}
+.home .sider .top .face{
+	float: left;
+	width: 48px;
+	height: 48px;
+	padding: 2px;
+	margin: 35px 10px 0px 46px;
+	border: 1px solid #ccc;
+	border-radius: 50%;
+}
+.home .sider .top .profile{
+	float: left;
+	margin: 40px 0px 0px 0px;
+	text-align: left;
+}
+.home .sider .top .profile h2{
+	width: 170px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	font-size: 16px;
+	color: rgba(255,255,255,0.9);
+}
+.home .sider .top .profile a{
+	font-size: 12px;
+	color: rgba(255,255,255,0.5);
+
+}
+.home .sider .bottom{
+	height: 305px;
+	padding-top: 28px;
+	background:  rgba(20,20,20,0.8);
+}
+.home .sider .bottom h2{
+	font-size: 16px;
+	text-align: center;
+	color: #fff;
+	font-weight: bold;
+}
+.home .sider .bottom ul{
+	margin: 20px 0 0 60px;
+	list-style: none;
+}
+.home .sider .bottom ul li{
+	margin-bottom: 17px;
+}
+.home .sider .bottom ul .img{
+	float: left;
+	display: block;
+	width: 23px;
+	height: 25px;
+	margin-top: 2px;
+}
+.home .sider .bottom ul .img1{
+	background: url(images/jianqie.png) 0px center no-repeat;
+}
+.home .sider .bottom ul .text{
+	width: 120px;
+	margin-left: 38px;
+	text-align: lef;
+}
+.sider .bottom ul .text .tit{
+	font-size: 14px;
+	color: rgba(255,255,255,0.9);
+}
+.sider .bottom ul .info{
+	font-size: 12px;
+	color: rgba(255,255,255,0.6);
+}
+.sider .bottom .click{
+	display: block;
+	width: 156px;
+	margin: 40px auto;
+	color: #fff;
+	font-size: 12px;
+	text-align: center;
+	opacity: 0.4;
 }
 .main{
 	height: 4000px;
