--- a/mi/css/ertongzsc.css
+++ b/mi/css/ertongzsc.css
@@ -1,65 +1,15 @@
-.col1{
-	width: 234px;
-	height: 170px;
-	float: left;
+
+/*价格及描述*/
+.main strong{
+	font-size: 25px;
+	color: #ff6700;
 }
-.col2{
-	width: 978px;
-	height: 170px;
-	margin-left: 14px;
-	float: left;
-}
-.flag{
-	height: 20px;
-	width: 65px;
-	font-size: 15px;
-	position: absolute;
-	top: 0;
-	left: 50%;
-	margin-left: -25px;
-}
-.off-flag{
-	background: #e53935;
-}
-.new-flag{
-	background: #83c44e;
-}
-.box2 .list-item{
-	box-sizing: border-box;
-	position: relative;
-	z-index: 88     
-}
-.box2 .view{
-	background: #ff6700;
-	width: 100%;
-	height: 0;
-	overflow: hidden;
-	position: absolute;
-	left: 0;
-	bottom: 0;
-}
-.flash .list-item:hover .view{ 
-	height: 80px;
-}
-.box2 .view .recommed{
-	padding: 10px 20px 10px 20px;
-	left: 15px;
-	color: #fff;
-	height: 40px;
-	line-height: 20px;
+.main del{
 	font-size: 12px;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+	color: #857666;
 }
-.box2 .view .author{
-	margin-top: 15px;
-	text-align: center;
+.main span{
 	font-size: 12px;
-	color: #ccc;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
 }
 .top{
 	background: #333333;
@@ -308,7 +258,7 @@
 	color: #fff;
 }
 .main{
-	height: 3840px;
+	height: 2100px;
 	background-color: #fff;
 }
 .main .camera{
@@ -370,8 +320,8 @@
 	left: 62px;
 	bottom: 168px;
 	color: #ff6700;
-	font-size: 25px;
 }
+
 .box2{
 	width: 100%;
 	height: 510px;
@@ -424,38 +374,206 @@
 	bottom: 40px;
 	right: 45px;
 }
-/*.box2{
-	position: relative;
+.recommend{
+	height: 1280px;
 }
-.box2 img{
-	height: 360px;
-	width: 606px;
-	margin-top: 20px;
+.recommend .box{
+	width: 100%;
+	height: 390px;
 }
-.box2 a{
-	font-size: 22px;
-	color: #474747;
+.recommend  .box-item{
+	width: 400px;
+	height: 100%;
+	text-align: center;
+	cursor: pointer;
+	transition: all 0.3s;
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 10px;
 }
-.box2 a:hover{
-	color: #474747;
+.recommend .box-item:hover{
+	transform: translateY(-2px);
 	box-shadow: 0 10px 30px rgba(0,0,0,0.2)
 }
-.box2 .lest-item{
-	font-size: 22px;
+.recommend .box img{
+	height: 270px;
+	width: 400px;
+	margin-bottom: 18px;
+}
+.recommend .box .list-name{
+	font-size: 20px;
 	color: #474747;
-	display: block;
 }
-
-.box2 .list-nub{
+.recommend .box .list-desc{
+	margin-top: 8px;
+	font-size: 12px;
+	color: #707070;
+}
+.recommend .box .list-nub{
+	margin-top: 10px;
+}
+.recommend .box strong{
 	color: #ff6700;
+	font-size: 18px;
+}
+.recommend .box span{
+	font-size: 12px;
+	color: #ff6700;
+}
+.footer{
+	height: 300px;
+}
+.footer .service{
+	border-bottom: 1px solid #e0e0e0;
+}
+.footer .service .service-item{
+	float: left;
+	width: 20%;
+	height: 16px;
+	padding: 30px 0;
+	text-align: center;
+}
+.footer .service .service-item a{
+	display: inline-block;
+	width: 100%;
+	font-size: 16px;
+	color: #616161;
+	border-right: 1px solid #e0e0e0;
+}
+.footer .service .service-item a:hover{
+	color: #ff6700;
+}
+.footer .service .service-item:last-child a{
+	border: none;
+}
+.footer .service .service-item a i{
 	font-size: 22px;
+	margin-right: 8px;
+	vertical-align: -4px;
+}
+.footer .links .links-item{
+	float: left;
+	padding: 40px 0;
+	margin-right: 105px;
+}
+.footer .links .links-item dt{
+	font-size: 14px;
+	color: #424242;
+	margin-bottom: 26px;
+}
+.footer .links .links-item dd{
+	font-size: 12px;
+	color: #757575;
+	margin-bottom: 16px;
+}
+.footer .links .links-item dd a:hover{
+	color: #ff6700;
+}
+.footer .links .links-contact{
+	float: right;
+	width: 246px;
+	height: 117px;
+	margin: 40px 0;
+	text-align: center;
+	border-left: 1px solid #e0e0e0;
+}
+.footer .links .links-contact .phone-nub{
+	font-size: 22px;
+	color: #ff6700;
+}
+.footer .links .links-contact .work-time,
+.footer .links .links-contact .desc{
+	font-size: 12px;
+	color: #616161;
+}
+.footer .links .links-contact .desc{
+	margin-bottom: 16px;
+}
+.footer .links .links-contact .call a{
+	display: inline-block;
+	width: 120px;
+	height: 30px;
+	line-height: 30px;
+	border: 1px solid #ff6700;
+	background-color: #fff;
+}
+.footer .links .links-contact .call a i,
+.footer .links .links-contact .call a{
+	font-size: 12px;
+	color: #ff6700;
+}
+.footer .links .links-contact .call a i{
+	margin-right: 3px;
+}
+.footer .links .links-contact .call a:hover{
+	background-color: #ff6700;
+	color: #fff;
+}
+.footer .links .links-contact .call a:hover i{
+	color: #fff;
+}
+.end{
+	height: 148px;
+	width: 100%;
+	position: relative;
+}
+.end .info .logo{
+	float: left;
+	height: 55px;
+	width: 55px;
+	background: #ff6700;
+	margin-top: 22px;
+}
+.end .info .logo a{
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-image: url(../imgzsc/logo.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+	text-indent: -100em;
+}
+.end .a1-item{
+	width: 900px;
+}
+.end .a1 .icp{
+	color: #757575;
+	font-size: 10px;
+}
+.end .a1 .icp a:hover{
+	color: #ff6700;
+}
+.end .a1-item a{
+	display: inline-block;
+	font-size: 10px;
+	margin-top: 20px;
+	color: #757575;
+	padding-right: 5px;
+	border-right: 1px solid #e0e0e0;
+}
+.end .a1-item a:hover{
+	color: #ff6700;
+}
+.end .a1-item a:last-child{
+	border-right: none;
+}
+.end .a2-item{
+	color: #bbbbbb;
+}
+.end .a2-item a:hover{
+	color: #ff6700;
+}
+.end .a2-item{
+	float: right;
 	position: absolute;
-	bottom: 0px;
-	left: 475px;
-}*/
-.main .child{
-	height: 1030px;
+	top: 20px;
+	right: 150px;
 }
-.main .recommend{
-	height: 1300px;
+.end .a2-item img{
+	height: 28px;
 }
+.end .foot{
+	height: 40px;
+	background-image: url(../images/slogan.png);
+	background-repeat: no-repeat;
+	background-position:center bottom ;
