--- a/mi/css/bjbjly.css
+++ b/mi/css/bjbjly.css
@@ -107,6 +107,10 @@
 	font-size: 20px;
 	margin-right: 21px;
 }
+.hed .dh .dht:hover{
+	cursor: pointer;
+	color: #ff6700;
+}
 .bod .bod-list .img-qbjs{
 	width: 100%;
 	height: 780px;
@@ -175,4 +179,116 @@
 	height: 442px;
 	background: red;
 	margin: 5px auto;
+}
+.hed .search{
+	float: right;
+	width: 296px;
+	height: 50px;
+	margin-top: 34px;
+	margin-right: 239px;
+	position: relative;
+}
+.hed .search .search-text{
+	float: left;
+	width: 246px;
+	height: 50px;
+	border: 1px solid #e0e0e0;
+	border-right: none; 
+	outline: none;
+	padding-left: 10px;
+	box-sizing: border-box;
+}
+.hed .search  .search-text:hover{
+	border-color: #999;
+}
+.hed .search  .search-text:hover + .search-btn{
+	border-color: #999;
+}
+.hed .search .search-btn{
+	float: left;
+	width: 50px;
+	height: 50px;
+	line-height: 50px;
+	border: 1px solid #e0e0e0;
+	box-sizing: border-box;
+	text-align: center;
+	font-size: 18px;
+}
+.hed .search:focus + .search-btn{
+	border-color: #ff6700;
+}
+
+.hed .search .search-btn:hover{
+	background: #ff6700;
+	cursor: pointer;
+	color: #fff;
+}
+.hed .search .search-text:focus {
+	border-color: #ff6700;
+}
+.hed .search .search-text:focus + .search-btn {
+	border-color: #ff6700;
+}
+.hed .search .search-hot-words{
+	position: absolute;
+	left: 100px;
+	line-height: 50px;
+}
+.hed .search .search-text:focus ~ .search-hot-words{
+	display: none;
+}
+.hed .search .search-hot-words .search-hot-words-item:hover{
+	background: #ff6700;
+	line-height: 18px;
+	height: 18px;
+
+}
+.hed .search .search-hot-words .search-hot-words-item{
+	display: inline-block;
+	height: 12px;
+	font-size: 12px;
+	line-height: 12px;
+	padding: 0 3px;
+	color: #757575;
+	background: #eee;
+	text-decoration: none;
+}
+.hed .search .search-keyword-list{
+	display: none;
+	position: absolute;
+	top: 50px;
+	left: 0px;
+	width: 247px;
+	border: 1px solid #ff6700;
+	border-top: none;
+	box-sizing: border-box;
+	background: #fff;
+	font-size: 12px;
+	z-index: 2
+}
+.hed .search-text:focus~.search-keyword-list{
+	display: block;
+	border-color: #ff6700;
+}
+.hed .search-keyword-list .keyword-item{
+	height: 30px;
+	line-height: 30px;
+	list-style: none;
+}
+.hed .search .search-keyword-list .keyword-item a{
+	width: 100%;
+	height: 30px;
+	box-sizing: border-box;
+	padding: 0 10px;
+	text-decoration: none;
+}
+.hed .search .search-keyword-list .keyword-item:hover{
+	background: #eee;
+}
+.hed .keyword{
+	color: #333;
+}
+.hed .search .search-keyword-list .keyword-item .num{
+	float: right;
+	color: #b0b0b0;
 }
