--- a/mi/css/tuangoujrx.css
+++ b/mi/css/tuangoujrx.css
@@ -50,7 +50,8 @@
 	}
 /*顶部区域结束*/
 
-.header{
+/*头部区域开始*/
+	.header{
 		height: 100px;
 	}
 	.header .header-logo{
@@ -65,14 +66,15 @@
 		width: 55px;
 		height: 100%;
 		background:  #ff6700 url(../images/logo.png) 50% 50% no-repeat;
-		text-indent: -999em;
+		text-indent: -999em;		
 	}
 	.header .header-logo .qiyelogo{
 		float: left;
 		display: block;
 		width: 67px;
 		height: 50px;
-		margin-left: 15px;
+		margin-left: 13px;
+		margin-top: 7px;
 		background: url(../images/qiyelogo.png) 50% 50% no-repeat;
 	}
 	.header .header-nav{
@@ -83,7 +85,7 @@
 		float: left;
 		height: 100px;
 		line-height: 100px;
-		margin-right: 20px;
+		margin-right: 17px;
 	}
 	.header .header-nav .header-nav-item a{
 		font-size: 16px;
@@ -141,105 +143,234 @@
 	.header .search .search-text:focus + .search-btn{
 		border-color: #ff6700;
 	}
+/*头部区域结束*/
 
-.home{
-	height: 700px;
-	/*background: purple;*/
-}
-.home .banner{
-	position: relative;
-	margin-bottom: 14px;
-}
-.home .sider{
-	position: absolute;
-	right: 0px;
-	top: 0px;
-	width: 296px;
-	height: 460px;
-}
-.home .sider .top{
-	width: 100%;
-	height: 127px;
-	background: rgba(20,20,20,0.6);
-}
-.home .sider .top .face{
-	float: left;
-	width: 48px;
-	height: 48px;
-	padding: 2px;
-	margin: 35px 10px 0px 46px;
-	border: 1px solid #ccc;
-	border-radius: 50%;
-}
-.home .sider .top .profile{
-	float: left;
-	margin: 40px 0px 0px 0px;
-	text-align: left;
-}
-.home .sider .top .profile h2{
-	width: 170px;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	font-size: 16px;
-	color: rgba(255,255,255,0.9);
-}
-.home .sider .top .profile a{
-	font-size: 12px;
-	color: rgba(255,255,255,0.5);
+/*home区域开始*/
+	.home{
+		height: 700px;
+		/*background: purple;*/
+	}
+	.home .banner{
+		position: relative;
+		margin-bottom: 14px;
+	}
+	.home .sider{
+		position: absolute;
+		right: 0px;
+		top: 0px;
+		width: 296px;
+		height: 460px;
+	}
+	.home .sider .sider-top{
+		width: 100%;
+		height: 127px;
+		background: rgba(20,20,20,0.6);
+	}
+	.home .sider .sider-top .face{
+		float: left;
+		width: 48px;
+		height: 48px;
+		padding: 2px;
+		margin: 35px 10px 0px 46px;
+		border: 1px solid #ccc;
+		border-radius: 50%;
+	}
+	.home .sider .sider-top .profile{
+		float: left;
+		margin: 40px 0px 0px 0px;
+		text-align: left;
+	}
+	.home .sider .sider-top .profile h2{
+		width: 170px;
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		font-size: 16px;
+		color: rgba(255,255,255,0.9);
+	}
+	.home .sider .sider-top .profile a{
+		font-size: 12px;
+		color: rgba(255,255,255,0.5);
 
-}
-.home .sider .bottom{
-	height: 305px;
-	padding-top: 28px;
-	background:  rgba(20,20,20,0.8);
-}
-.home .sider .bottom h2{
-	font-size: 16px;
-	text-align: center;
-	color: #fff;
-	font-weight: bold;
-}
-.home .sider .bottom ul{
-	margin: 20px 0 0 60px;
-	list-style: none;
-}
-.home .sider .bottom ul li{
-	margin-bottom: 17px;
-}
-.home .sider .bottom ul .img{
-	float: left;
-	display: block;
-	width: 23px;
-	height: 25px;
-	margin-top: 2px;
-}
-.home .sider .bottom ul .img1{
-	background: url(images/jianqie.png) 0px center no-repeat;
-}
-.home .sider .bottom ul .text{
-	width: 120px;
-	margin-left: 38px;
-	text-align: lef;
-}
-.sider .bottom ul .text .tit{
-	font-size: 14px;
-	color: rgba(255,255,255,0.9);
-}
-.sider .bottom ul .info{
-	font-size: 12px;
-	color: rgba(255,255,255,0.6);
-}
-.sider .bottom .click{
-	display: block;
-	width: 156px;
-	margin: 40px auto;
-	color: #fff;
-	font-size: 12px;
-	text-align: center;
-	opacity: 0.4;
-}
+	}
+	.home .sider .sider-bottom{
+		height: 305px;
+		padding-top: 28px;
+		background:  rgba(20,20,20,0.8);
+	}
+	.home .sider .sider-bottom h2{
+		font-size: 16px;
+		text-align: center;
+		color: #fff;
+		font-weight: bold;
+	}
+	.home .sider .sider-bottom ul{
+		margin: 20px 0 0 60px;
+		list-style: none;
+	}
+	.home .sider .sider-bottom ul li{
+		margin-bottom: 17px;
+	}
+	.home .sider .sider-bottom ul .img{
+		float: left;
+		display: block;
+		width: 23px;
+		height: 25px;
+		margin-top: 2px;
+	}
+	.home .sider .sider-bottom ul .img1{
+		background: url(images/sprite.png) 0px center no-repeat;
+	}
+	.home .sider .sider-bottom ul .text{
+		width: 120px;
+		margin-left: 38px;
+		text-align: lef;
+	}
+	.sider .sider-bottom ul .text .tit{
+		font-size: 14px;
+		color: rgba(255,255,255,0.9);
+	}
+	.sider .sider-bottom ul .info{
+		font-size: 12px;
+		color: rgba(255,255,255,0.6);
+	}
+	.sider .sider-bottom .click{
+		display: block;
+		width: 156px;
+		margin: 40px auto;
+		color: #fff;
+		font-size: 12px;
+		text-align: center;
+		opacity: 0.4;
+	}
+	.home .hot .hot-list li{
+		float: left;
+		width: 295px;
+		margin-left: 15px;
+		list-style: none;
+	}
+	.home .hot .hot-list li:first-child{
+		margin-left: 0px;
+	}
+/*home区域结束*/
+
 .main{
 	height: 4000px;
+	margin-top: 50px;
+	padding-top: 50px;
 	background: #f5f5f5;
 }
+.hd{
+	position: relative;
+	height: 58px;
+	margin-bottom: 14px;
+}
+.hd .title{
+	margin: 0;
+	font-size: 22px;
+	font-weight: 200;
+	line-height: 58px;
+	color: #333;
+}
+.hd .more{
+	position: absolute;
+	top: 0;
+	right: 0;
+
+}
+.hd .more a{
+	color: #424242;
+	font-size: 16px;
+	line-height: 58px;
+	transition: all 0.4s;
+}
+.hd .more a i{
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	line-height: 20px;
+	margin-left: 8px;
+	border-radius: 50%;
+	background: #b0b0b0;
+	color: #fff;
+	text-align: center;
+	vertical-align: -1px;
+	transition: all 0.4s;
+}
+.hd .more a:hover{
+	color: #ff6700;
+}
+.hd .more a:hover i{
+	background: #ff6700;
+}
+.bd{
+	padding-bottom: 15px;
+}
+.bd li{
+	position: relative;
+	float: left;
+	width: 234px;
+	height: 300px;
+	padding-top: 39px;
+	text-align: center;
+	background: #fff;
+	list-style: none;
+	margin: 0 0 14px 14px;
+	cursor: pointer;
+	overflow: hidden;
+	transition: all 0.3s linear;
+}
+.bd li:hover{
+	box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+	transform: translateY(-2px);
+}
+.bd li:first-child{
+	margin-left: 0px;
+}
+.bd .thumb {
+	display: block;
+	width: 160px;
+	margin: 0 auto 25px;
+}
+.bd .thumb img{
+	width: 160px;
+	height: 160px;
+}
+.bd .title{
+	margin: 0 20px 7px;
+	font-size: 14px;
+	font-weight: 400;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.bd .title a{
+	color: #212121;
+}
+.bd .desc{
+	height: 18px;
+	margin: 0 20px 12px;
+	font-size: 12px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	color: #b0b0b0;	
+}
+.bd .btn{
+	position: absolute;
+	bottom: -38px;
+	left: 0;
+	display: inline-block;
+	width: 100%;
+	height: 38px;
+	font-size: 14px;
+	line-height: 38px;
+	background: #ff6700;
+	color: #fff;
+	transition: bottom 0.5s;
+}
+.bd li:hover .btn{
+	bottom: 0;
+}
+
+
