--- a/mi/css/bjbjly.css
+++ b/mi/css/bjbjly.css
@@ -1,4 +1,4 @@
-.top{
+	.top{
 	width: 100%;
 	height: 50px;
 	background: #333333;
@@ -182,18 +182,70 @@
 .bod .bod-list .img-sh .img-sh1{
 	width: 610px;
 	height: 442px;
-	background: blue;
 	float: left;
+	position: relative;
+	transition: transform 0.2s linear 0s;
+}
+.bod .bod-list .img-sh .img-sh1:hover{
+	box-shadow: -1px 4px 8px 4px rgba(0,0,0,0.1);
+	transform: translateY(-5px);
 }
 .bod .bod-list .img-sh .img-sh1 img{
 	width: 100%;
 	height: 75%;
 }
+.bod .bod-list .img-sh .img-sh1 .img-sh1-txt1{
+	font-size: 24px;
+	position: absolute;
+	top:374px;
+	left:45px;
+}
+.bod .bod-list .img-sh .img-sh1 .img-sh1-txt2{
+		font-size: 16px;
+		color: grey;
+		position: absolute;
+		top:404px;
+		left:64px;
+}
+.bod .bod-list .img-sh .img-sh1 .img-sh1-txt3{
+	color: #ff6700;
+	font-size: 32px;
+	font-weight: lighter;
+	position: absolute;
+	top:385px;
+	left:430px;
+}
 .bod .bod-list .img-sh .img-sh2{
 	width: 610px;
 	height: 442px;
-	background: yellow;
 	float: right;
+	position: relative;
+	transition: transform 0.2s linear 0s;
+}
+.bod .bod-list .img-sh .img-sh2:hover{
+	box-shadow: -1px 4px 8px 4px rgba(0,0,0,0.1);
+	transform: translateY(-5px);
+}
+.bod .bod-list .img-sh .img-sh2 .img-sh2-txt1{
+	font-size: 24px;
+	position: absolute;
+	top:374px;
+	left:45px;
+}
+.bod .bod-list .img-sh .img-sh2 .img-sh2-txt2{
+	font-size: 16px;
+	color: grey;
+	position: absolute;
+	top:404px;
+	left:64px;
+}
+.bod .bod-list .img-sh .img-sh2 .img-sh2-txt3{
+	color: #ff6700;
+	font-size: 32px;
+	font-weight: lighter;
+	position: absolute;
+	top:385px;
+	left:430px;
 }
 .bod .bod-list .img-sh .img-sh2 img{
 	width: 100%;
@@ -311,3 +363,249 @@
 	float: right;
 	color: #b0b0b0;
 }
+.bod .bod-list .img-bd .img-bd-list{
+	width: 1226px;
+	height: 442px;
+	margin:0 auto;
+	position: relative;
+	transition: transform 0.2s linear 0s;
+}
+.bod .bod-list .img-bd .img-bd-list:hover{
+	box-shadow: -1px 4px 8px 4px rgba(0,0,0,0.1);
+	transform: translateY(-5px);
+}
+.bod .bod-list .img-bd .img-bd-list .img-bd-text1{
+	position: absolute;
+    color: #474747;
+    font-size: 32px;
+    top: 120px;
+    left: 910px;
+}
+.bod .bod-list .img-bd .img-bd-list .img-bd-text2{
+	font-size: 16px;
+    position: absolute;
+    top: 224px;
+    left: 911px;
+    color: #707070;
+}
+.bod .bod-list .img-bd .img-bd-list .img-bd-text3{
+	font-size: 24px;
+    color: #ff6700;
+    position: absolute;
+    top: 268px;
+    left: 906px;
+}
+.bod .bod-list .img-bd .img-bd-list .img-bd-text4{
+	font-size: 16px;
+    position: absolute;
+    top: 331px;
+    left: 901px;
+    color: #707070;
+}
+.bod .bod-list .img-bd .img-bd-list img{
+	float: left;
+	height: 100%;
+}
+.bod .bod-list .img-if{
+	width: 1226px;
+    height: 442px;
+    margin: 5px auto;
+}
+.bod .bod-list .img-if .img-if-list{
+	width: 610px;
+    height: 442px;
+    float: left;
+    position: relative;
+    transition: transform 0.2s linear 0s;
+}
+.bod .bod-list .img-if .img-if-list .img-if-txt1{
+
+}
+.bod .bod-list .img-if .img-if-list:hover{
+	box-shadow: -1px 4px 8px 4px rgba(0,0,0,0.1);
+    transform: translateY(-5px);
+}
+.bod .bod-list .img-if .img-mx{
+	width: 610px;
+    height: 442px;
+    float: right;
+    position: relative;
+    transition: transform 0.2s linear 0s;
+}
+.bod .bod-list .img-if .img-mx:hover{
+	box-shadow: -1px 4px 8px 4px rgba(0,0,0,0.1);
+    transform: translateY(-5px);
+}
+.footer{
+	height: 300px;
+}
+.footer .service{
+	border-bottom: 1px solid #e0e0e0;
+}
+.footer .service .service-item{
+	float: left;
+	width: 20%;
+	height: 16px;
+	padding: 30px 0;
+	text-align: center;
+}
+.footer .service .service-item a{
+	display: inline-block;
+	width: 100%;
+	font-size: 16px;
+	color: #616161;
+	border-right: 1px solid #e0e0e0;
+}
+.footer .service .service-item a:hover{
+	color: #ff6700;
+}
+.footer .service .service-item:last-child a{
+	border: none;
+}
+.footer .service .service-item a i{
+	font-size: 22px;
+	margin-right: 8px;
+	vertical-align: -4px;
+}
+.footer .links .links-item{
+	float: left;
+	padding: 40px 0;
+	margin-right: 105px;
+}
+.footer .links .links-item dt{
+	font-size: 14px;
+	color: #424242;
+	margin-bottom: 26px;
+}
+.footer .links .links-item dd{
+	font-size: 12px;
+	color: #757575;
+	margin-bottom: 16px;
+}
+.footer .links .links-item dd a:hover{
+	color: #ff6700;
+}
+.footer .links .links-contact{
+	float: right;
+	width: 246px;
+	height: 117px;
+	margin: 40px 0;
+	text-align: center;
+	border-left: 1px solid #e0e0e0;
+}
+.footer .links .links-contact .phone-nub{
+	font-size: 22px;
+	color: #ff6700;
+}
+.footer .links .links-contact .work-time,
+.footer .links .links-contact .desc{
+	font-size: 12px;
+	color: #616161;
+}
+.footer .links .links-contact .desc{
+	margin-bottom: 16px;
+}
+.footer .links .links-contact .call a{
+	display: inline-block;
+	width: 120px;
+	height: 30px;
+	line-height: 30px;
+	border: 1px solid #ff6700;
+	background-color: #fff;
+}
+.footer .links .links-contact .call a i,
+.footer .links .links-contact .call a{
+	font-size: 12px;
+	color: #ff6700;
+}
+.footer .links .links-contact .call a i{
+	margin-right: 3px;
+}
+.footer .links .links-contact .call a:hover{
+	background-color: #ff6700;
+	color: #fff;
+}
+.footer .links .links-contact .call a:hover i{
+	color: #fff;
+}
+.end{
+	height: 148px;
+	width: 100%;
+	position: relative;
+}
+.end .info .logo{
+	float: left;
+	height: 55px;
+	width: 55px;
+	background: #ff6700;
+	margin-top: 22px;
+	position: absolute;
+	top:7px;
+	left:372px;
+}
+.end .info .logo a{
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-image: url(../images/logo.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+	text-indent: -100em;
+}
+.end .a1-item{
+	width: 900px;
+	position: absolute;
+	top:6px;
+	left:433px;
+}
+.end .a1-item a{
+	text-decoration: none;
+}
+.end .a1 .icp{
+	color: #757575;
+	font-size: 10px;
+	position: absolute;
+	top:44px;
+	left:438px;
+}
+.end .a1 .icp a{
+	text-decoration: none;
+	color: grey;
+}
+.end .a1 .icp a:hover{
+	color: #ff6700;
+}
+.end .a1-item a{
+	display: inline-block;
+	font-size: 10px;
+	margin-top: 20px;
+	color: #757575;
+	padding-right: 5px;
+	border-right: 1px solid #e0e0e0;
+}
+.end .a1-item a:hover{
+	color: #ff6700;
+}
+.end .a1-item a:last-child{
+	border-right: none;
+}
+.end .a2-item{
+	color: #bbbbbb;
+}
+.end .a2-item a:hover{
+	color: #ff6700;
+}
+.end .a2-item{
+	float: right;
+	position: absolute;
+	top: 20px;
+	right: 150px;
+}
+.end .a2-item img{
+	height: 28px;
+}
+.end .foot{
+	height: 40px;
+	background-image: url(../images/slogan.png);
+	background-repeat: no-repeat;
+	background-position:center bottom ;
