--- a/mi/css/tuangoujrx.css
+++ b/mi/css/tuangoujrx.css
@@ -219,7 +219,16 @@
 		margin-top: 2px;
 	}
 	.home .sider .sider-bottom ul .img1{
-		background: url(images/sprite.png) 0px center no-repeat;
+		background: url(../images/sprite.png) 0px center no-repeat;
+	}
+	.home .sider .sider-bottom ul .img2{
+		background: url(../images/sprite.png) -23px center no-repeat;
+	}
+	.home .sider .sider-bottom ul .img3{
+		background: url(../images/sprite.png) -46px center no-repeat;
+	}
+	.home .sider .sider-bottom ul .img4{
+		background: url(../images/sprite.png) -69px center no-repeat;
 	}
 	.home .sider .sider-bottom ul .text{
 		width: 120px;
@@ -254,123 +263,245 @@
 	}
 /*home区域结束*/
 
-.main{
-	height: 4000px;
-	margin-top: 50px;
-	padding-top: 50px;
-	background: #f5f5f5;
-}
-.hd{
-	position: relative;
-	height: 58px;
-	margin-bottom: 14px;
-}
-.hd .title{
-	margin: 0;
-	font-size: 22px;
-	font-weight: 200;
-	line-height: 58px;
-	color: #333;
-}
-.hd .more{
-	position: absolute;
-	top: 0;
-	right: 0;
+/*main区域开始*/
+	.main{
+		margin-top: 50px;
+		padding-top: 50px;
+		background: #f5f5f5;
+	}
+	.hd{
+		position: relative;
+		height: 58px;
+		margin-bottom: 14px;
+	}
+	.hd .title{
+		margin: 0;
+		font-size: 22px;
+		font-weight: 200;
+		line-height: 58px;
+		color: #333;
+	}
+	.hd .more{
+		position: absolute;
+		top: 0;
+		right: 0;
 
-}
-.hd .more a{
-	color: #424242;
-	font-size: 16px;
-	line-height: 58px;
-	transition: all 0.4s;
-}
-.hd .more a i{
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	line-height: 20px;
-	margin-left: 8px;
-	border-radius: 50%;
-	background: #b0b0b0;
-	color: #fff;
-	text-align: center;
-	vertical-align: -1px;
-	transition: all 0.4s;
-}
-.hd .more a:hover{
-	color: #ff6700;
-}
-.hd .more a:hover i{
-	background: #ff6700;
-}
-.bd{
-	padding-bottom: 15px;
-}
-.bd li{
-	position: relative;
-	float: left;
-	width: 234px;
-	height: 300px;
-	padding-top: 39px;
-	text-align: center;
-	background: #fff;
-	list-style: none;
-	margin: 0 0 14px 14px;
-	cursor: pointer;
-	overflow: hidden;
-	transition: all 0.3s linear;
-}
-.bd li:hover{
-	box-shadow: 0 5px 20px rgba(0,0,0,0.3);
-	transform: translateY(-2px);
-}
-.bd li:first-child{
-	margin-left: 0px;
-}
-.bd .thumb {
-	display: block;
-	width: 160px;
-	margin: 0 auto 25px;
-}
-.bd .thumb img{
-	width: 160px;
-	height: 160px;
-}
-.bd .title{
-	margin: 0 20px 7px;
-	font-size: 14px;
-	font-weight: 400;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
-}
-.bd .title a{
-	color: #212121;
-}
-.bd .desc{
-	height: 18px;
-	margin: 0 20px 12px;
-	font-size: 12px;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
-	color: #b0b0b0;	
-}
-.bd .btn{
-	position: absolute;
-	bottom: -38px;
-	left: 0;
-	display: inline-block;
-	width: 100%;
-	height: 38px;
-	font-size: 14px;
-	line-height: 38px;
-	background: #ff6700;
-	color: #fff;
-	transition: bottom 0.5s;
-}
-.bd li:hover .btn{
-	bottom: 0;
-}
+	}
+	.hd .more a{
+		color: #424242;
+		font-size: 16px;
+		line-height: 58px;
+		transition: all 0.4s;
+	}
+	.hd .more a i{
+		display: inline-block;
+		width: 20px;
+		height: 20px;
+		line-height: 20px;
+		margin-left: 8px;
+		border-radius: 50%;
+		background: #b0b0b0;
+		color: #fff;
+		text-align: center;
+		vertical-align: -1px;
+		transition: all 0.4s;
+	}
+	.hd .more a:hover{
+		color: #ff6700;
+	}
+	.hd .more a:hover i{
+		background: #ff6700;
+	}
+	.bd{
+		padding-bottom: 15px;
+	}
+	.bd li{
+		position: relative;
+		float: left;
+		width: 234px;
+		height: 300px;
+		padding-top: 39px;
+		text-align: center;
+		background: #fff;
+		list-style: none;
+		margin: 0 0 14px 14px;
+		cursor: pointer;
+		overflow: hidden;
+		transition: all 0.3s linear;
+	}
+	.bd li:hover{
+		box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+		transform: translateY(-2px);
+	}
+	.bd li:first-child{
+		margin-left: 0px;
+	}
+	.bd .thumb {
+		display: block;
+		width: 160px;
+		margin: 0 auto 25px;
+	}
+	.bd .thumb img{
+		width: 160px;
+		height: 160px;
+	}
+	.bd .title{
+		margin: 0 20px 7px;
+		font-size: 14px;
+		font-weight: 400;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+	}
+	.bd .title a{
+		color: #212121;
+	}
+	.bd .desc{
+		height: 18px;
+		margin: 0 20px 12px;
+		font-size: 12px;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+		color: #b0b0b0;	
+	}
+	.bd .btn{
+		position: absolute;
+		bottom: -38px;
+		left: 0;
+		display: inline-block;
+		width: 100%;
+		height: 38px;
+		font-size: 14px;
+		line-height: 38px;
+		background: #ff6700;
+		color: #fff;
+		transition: bottom 0.5s;
+	}
+	.bd li:hover .btn{
+		bottom: 0;
+	}
+/*main区域结束*/
+
+/*footer区域开始*/
+	.footer{
+		text-align: center;
+		padding-bottom: 105px;
+		background: #f5f5f5;
+	}
+	.footer .container{
+		padding: 50px 0 60px 0;
+		background: #fff;
+	}
 
 
+	.footer h2{
+		margin: 0;
+		padding: 0;
+		font-size: 35px;
+		line-height: 1;
+		color: #424242;
+		font-weight: bold;
+	}
+	.footer p{
+		display: block;
+		font-size: 14px;
+		height: 50px;
+		line-height: 50px;
+	}
+	.footer .step{
+		background: url(../images/step.jpg) 50% 0 no-repeat;
+		width: 758px;
+		height: 104px;
+		margin: 56px auto 20px;
+	}
+/*footer区域结束*/
+
+/*end区域开始*/
+	.end{
+		background: #fff;
+		padding: 30px 0;
+	}
+	.end .service{
+		padding: 27px 0;
+	}
+	.end .service-item{
+		float: left;
+		width: 20%;
+		height: 41px;
+		line-height: 41px;
+		text-align: center;
+		border-right: 1px solid #e0e0e0;
+		box-sizing: border-box;
+	}
+	.end .service-item:last-child{
+		border-right: none;
+	}
+	.end .service-item a{
+		font-size: 16px;
+		color: #616161;
+	}
+	.end .service-item a i{
+		font-size: 24px;
+		vertical-align: -4px;
+		margin-right: 6px;
+		/*color: #616161;*/
+	}
+/*end区域结束*/
+
+/*end2区域开始*/
+	.end2{
+		padding: 30px 0;
+		background: #f5f5f5;
+	}
+
+	.end2 .info .logo{
+		float: left;
+		width: 57px;
+		height: 57px;
+		margin-right: 10px;
+		background-color: #ff6700;
+		background-image: url(../images/logo.png);
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+	.end2 .info .site{
+		float: left;
+	}
+	.end2 .info .site .nav-link a{
+		color: #757575;
+	}
+	.end2 .info .site .nav-link a:hover{
+		color: #ff6700;
+	}
+	.end2 .info .site .nav-link .sep{
+		display: inline-block;
+		width: 1px;
+		height: 12px;
+		background: #b0b0b0;
+		vertical-align: -2px;
+	}
+	.end2 .info .site .icp{
+		line-height: 18px;
+	}
+	.end2 .info .site .icp a:hover{
+		color: #ff6700;
+	}
+	.end2 .info .site .decare{
+		font-size: 12px;
+		color: #b0b0b0;
+	}
+	.end2 .info .links{
+		float: right;
+		margin: 4px 0 0 ;
+	}
+	.end2 .info .links img{
+		height: 28px;
+	}
+	.end2 .slogan{
+		height: 60px;
+		background-image: url(../images/slogan.png);
+		background-repeat: no-repeat;
+		background-position: center bottom;
+	}
+/*end2区域结束*/
