--- a/mi/css/fuwuzsc.css
+++ b/mi/css/fuwuzsc.css
@@ -207,7 +207,7 @@
 		width: 2466px;
 		height: 300px;
 		float: left;
-		animation: sport 1s linear 3s ;
+		animation: sport 1s linear 3s;
 }
 
 	@keyframes sport{
@@ -258,16 +258,76 @@
 .main .top{
 width: 100%;
 height: 750px;
-background-color: red;
+background: #fff;
+}
+.main .top h2{
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	font-size: 30px;
+	color: #666666;
+	text-align: center;
+}
+.main .top .box{
+	width: 24%;
+	height: 250px;
+	text-align: center;
+	transition: all 0.3s;
+	background: #fff;
+	cursor: pointer;
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 20px;
+}
+.main .top .box:hover a{
+	color: #ff6700;
+}
+.main .top .box:hover{
+	color: #ff6700;
+	transform: translateY(-2px);
+	box-shadow: 0 10px 30px rgba(0,0,0,0.2)
+}
+.main .top .box img{
+	margin-top: 80px;
+}
+.main .top .box .list-name{
+	color: #222222;
+	font-size: 18px;
+	font-weight: bold;
+	display: block;
+	margin-top: 20px;
+}
+.main .top .box .list-desc{
+	margin-top: 17px;
+	font-size: 12px;
 }
 .main .bottom{
 width: 100%;
 height: 750px;
-background-color: blue;
+}
+.main .bottom .box{
+	width: 24%;
+	height: 310px;
+	text-align: center;
+	cursor: pointer;
+	float: left;
+}
+.main .bottom .box .list-name{
+	color: #666666;
+	font-size: 16px;
+	padding-bottom: 10px
+}
+.main .bottom img{
+	background: #fff;
+}
+.main .bottom .box .list-name{
+	/*margin-top: 10px;*/
+	margin-bottom: 20px;
 }
 .service{
 	width: 100%;
 	height: 1000px;
+	margin-top: 50px;
 }
 .box1{
 	height: 500px;
