--- a/mi/css/bjbjly.css
+++ b/mi/css/bjbjly.css
@@ -29,7 +29,7 @@
 	width: 150px;
 	height: 50px;
 	float: right;
-	background: #424242;
+	background: #424242; 
 	margin-right: 12%;
 	color: #b0b0b0;
 	position: relative;
@@ -47,6 +47,26 @@
 	position: absolute;
 	top:9px;
 	left:16px;
+}
+.top .top-cart .xuangou{
+	width: 401px;
+	height: 85px;
+	border: 0px solid black;
+	position: absolute;
+	top:50px;
+	left:-252px;
+	z-index: 2;
+	transition: transform 1s linear 1s;
+	background: white;
+	text-align: center;
+	line-height: 85px;
+	color: black;
+	display: none;
+}
+.top .top-cart:hover .xuangou{
+	display: block;
+	transform: translateY(20px);
+
 }
 .top .top-cart:hover{
 	background: #fff;
@@ -93,14 +113,55 @@
 .hed .logo img{
 	position: absolute;
 	top:5px;
-	left:5px;
+	left:6px;
 	cursor: pointer;
+	transition: transform 0.2s linear 0s;
+}
+.hed .logo:hover img{
+	transform: translateX(46px);
+}
+.hed .logo .iconfont{
+	font-size: 28px;
+	color: white;
+	position: absolute;
+	top:11px;
+	left:-28px;
+	transition: transform 0.2s ease-in-out 0s;
+}
+.hed .logo:hover .iconfont{
+	display: block;
+	transform: translateX(46px);
 }
 .hed .dh{
 	list-style: none;
 	position: absolute;
 	top:48px;
 	left:372px;
+}
+.hed .dh #fl{
+	position: absolute;
+	top:82px;
+	left:-153px;
+	display: none;
+	background-color: white;
+	width: 280px;
+	height: 560px;
+	border: 1px solid #ff6700;
+	z-index: 2
+}
+.hed .dh #fl .flt{
+	list-style: none;
+	height: 45px;
+	line-height: 45px;
+	margin-top: 10px;
+	padding-left: 15px;
+}
+.hed .dh #fl .flt:hover{
+	background-color: #ff6700;
+}
+.hed .dh #fl .flt .iconfont{
+	float: right;
+	padding-right: 10px;
 }
 .hed .dh .dht{
 	display: inline-block;
@@ -118,10 +179,115 @@
 .bod .bod-list .img-qbjs img{
 	width: 100%;
 	height: 100%;
+	z-index: 0
 }
 .bod .bod-list{
 	width: 100%;
 	list-style: none;
+	position: relative;
+}
+.bod #bod-xm{
+	width: 100%;
+	height: 280px;
+	background: white;
+	position: absolute;
+	border-top: 1px solid #ccc;
+	display: none;
+	z-index: 2
+}
+.bod #bod-xm .xmsj{
+	position: absolute;
+	top:0px;
+	left:300px;
+}
+.bod #bod-xm .xmsj .xmsj-list{
+	width: 220px;
+	height: 280px;
+	float: left;
+	border-right: 0.03px solid #ccc;
+	list-style: none;
+	position: relative;
+}
+.bod #bod-xm .xmsj .xmsj-list:nth-child(1){
+	border-left: 0.03px solid #ccc;
+}
+.bod #bod-xm .xmsj .xmsj-list img{
+	position: absolute;
+	top:87px;
+	left:87px;
+}
+.bod #bod-xm .xmsj .xmsj-list .xp{
+	background: white;
+	position: absolute;
+	border: 1px solid #ff6700;
+	top:0px;
+	left:72px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.bod #bod-xm .xmsj .xmsj-list .sxt{
+	position: absolute;
+	top:190px;
+	left:70px;
+}
+.bod #bod-xm .xmsj .xmsj-list .jg{
+	position: absolute;
+	top:214px;
+	left:75px;
+	color: #ff6700;
+	font-size: 12px;
+}
+.bod #hm{
+	width: 100%;
+	height: 280px;
+	position: absolute;
+	background: white;
+	border-top: 1px solid #ccc;
+	display: none;
+	z-index: 999
+}
+.bod #hm .hml{
+	position: absolute;
+	top:0px;
+	left:450px;
+}
+.bod #hm .hml .hml-detail{
+	width: 220px;
+	height: 280px;
+	background: white;
+	float: left;
+	list-style: none;
+	border-right: 1px solid #ccc;
+	position: relative;
+}
+.bod #hm .hml .hml-detail img{
+	position: absolute;
+	top:70px;
+	left:70px;
+}
+.bod #hm .hml .hml-detail .xphm{
+	background: white;
+	position: absolute;
+	border: 1px solid #ff6700;
+	top:0px;
+	left:72px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.bod #hm .hml .hml-detail .hmjg{
+	position: absolute;
+	top:235px;
+	left:90px;
+	color: #ff6700;
+	font-size: 12px;
+}
+.bod #hm .hml .hml-detail .hmsj{
+	position: absolute;
+	top:210px;
+	left:76px;
+}
+.bod #hm .hml .hml-detail:nth-child(1){
+	border-left: 1px solid #ccc;
 }
 .bod .bod-list .img-baokuan{
 	width: 100%;
@@ -404,6 +570,15 @@
 .hed .search .search-keyword-list .keyword-item .num{
 	float: right;
 	color: #b0b0b0;
+}
+.bod .bod-list .img-bd .img-bd-bk{
+	background: white;
+	width: 100%;
+	height: 180px;
+	line-height: 180px;
+	text-align: center;
+	color: #295b97;
+    font-size: 70px;
 }
 .bod .bod-list .img-bd .img-bd-list{
 	width: 1226px;
