--- a/mi/css/ertongzsc.css
+++ b/mi/css/ertongzsc.css
@@ -89,10 +89,48 @@
 	height: 100px;
 	line-height: 100px;
 	margin-right: 20px;
+	position: relative;
+}
+.header .header-nav .header-nav-item:hover .search-keyword-list{
+	display: block;
 }
 .header .header-nav .header-nav-item a{
 	font-size: 16px;
 	color: #333;
+}
+.header .header-nav .header-nav-item .search-keyword-list{
+	width: 247px;
+	display: none;
+	position: absolute;
+	top: 100px;
+	left: -180px;
+	width: 247px;
+	border: 1px solid #ff6700;
+	box-sizing: border-box;
+	background: #fff;
+	font-size: 12px;
+	z-index: 2
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword-item a{
+	width: 100%;
+	height: 30px;
+	box-sizing: border-box;
+	padding: 10px 20px;
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword-item:hover{
+	background-color: #ff6700;
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword-item .iconfont{
+	float: right;
+	color: #757575;
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword{
+	font-size: 16px;
+	color: #757575;
+}
+.header .header-nav .header-nav-item .search-keyword-list:foucs{
+	display: block;
+	border-color: #ff6700;
 }
 .header .header-nav .header-nav-item a:hover{
 	color: #ff6700;
