--- a/mi/css/servicejrx.css
+++ b/mi/css/servicejrx.css
@@ -207,7 +207,73 @@
 	height: 3500px;
 	background: #f5f5f5;
 }
-
+.bread{
+	height: 40px;
+	font-size: 12px;
+	line-height: 40px;
+}
+.bread a{
+	color: #757575;
+}
+.bread a:hover{
+	color: #616161;
+}
+.bread .sep{
+	margin: 0 0.5em;
+	color: #b0b0b0;
+}
+.carousel{
+	position: relative;
+}
+.carousel .viewport{
+	position: relative;
+	width: 100%;
+	height: 250px;
+	overflow: hidden;
+}
+.carousel .viewport .index-header{
+	width: 400%;
+	position: relative;
+	transition-duration: 
+}
+.carousel .viewport .index-header .sider{
+	float: left;
+	list-style: none;
+	position: relative;
+	width: 1226px;
+	line-height: 250px;
+	text-align: center;
+}
+.carousel .controls{
+	position: absolute;
+	left: 0;
+	bottom: 20px;
+	width: 100%;
+	color: #666;
+	text-align: center;
+	z-index: 1;
+}
+.carousel .controls .controls-list-item{
+	display: inline-block;
+}
+.carousel .controls .controls-list a{
+	float: left;
+	display: block;
+	width: 6px;
+	height: 6px;
+	margin: 0 5px;
+	border: 2px solid rgba(0,0,0,0.4);
+	border-radius: 10px;
+	text-align: center;
+	overflow: hidden;
+}
+.carousel .controls .controls-list a{
+	background: rgba(255,255,255,0.4);
+}
+.carousel .controls .controls-list a:hover{
+	background: rgba(0,0,0,0.4);
+	border-color: rgba(255,255,255,0.3);
+}
 .footer{
 	height: 300px;
 }
