--- a/mi/css/ertongzsc.css
+++ b/mi/css/ertongzsc.css
@@ -11,6 +11,25 @@
 .main span{
 	font-size: 12px;
 }
+/* 标签*/
+.flag{
+		position: absolute;
+		top: 0px;
+		left: 50%;
+		width: 66px;
+		height: 22px;
+		line-height: 22px;
+		color: #fff;
+		font-size: 12px;
+		border: 1px solid #ff6700;
+		text-align: center;	
+		z-index: 100;
+		text-align: center;
+	}
+	.new-flag{
+		background: #fff;
+		color: #ff6700;
+	}
 .top{
 	background: #333333;
 	font-size: 12px;
@@ -61,6 +80,7 @@
 }
 .header{
 	height: 100px;
+	position: relative;
 }
 .header .logo{
 	float: left;
@@ -89,7 +109,7 @@
 	height: 100px;
 	line-height: 100px;
 	margin-right: 20px;
-	position: relative;
+	/*position: relative;*/
 }
 .header .header-nav .header-nav-item:hover .search-keyword-list{
 	display: block;
@@ -103,13 +123,61 @@
 	display: none;
 	position: absolute;
 	top: 100px;
-	left: -180px;
+	left: 180px;
 	width: 247px;
 	border: 1px solid #ff6700;
 	box-sizing: border-box;
 	background: #fff;
 	font-size: 12px;
 	z-index: 2
+}
+.header .header-nav .header-nav-item .box{
+	background-color: #fff;
+	height: 250px;
+	width: 1600px;
+	position: absolute;
+	top: 100px;
+	left: 0;
+	border-top: 1px solid #e0e0e0;
+	box-sizing: border-box;
+	font-size: 12px;
+	z-index: 99;
+	display: none;
+}
+.header .header-nav .header-nav-item:hover .box{
+	display: block;
+}
+.header .header-nav .header-nav-item .box .box1{
+	width: 150px;
+	position: relative;
+	float: left;
+	margin-left: 50px;
+}
+.header .header-nav .header-nav-item .box .box1:first-child{
+	margin-left: 215px
+}
+.header .header-nav .header-nav-item .box .box1 .box2{
+	width: 205px;
+	height: 113px;
+	margin-top: 35px;
+	border-right: 1px solid #e0e0e0;
+}
+.header .header-nav .header-nav-item .box .box1 .box2 img{
+	width: 205px;
+	height: 113px;
+}
+.header .header-nav .header-nav-item .box .box1 .product-name{
+	font-size: 12px;
+	color: #333333;
+	margin-left: 20px;	
+	text-align: center;
+}
+.header .header-nav .header-nav-item .box .box1 .product-price{
+	font-size: 12px;
+	color: #ff6700;
+	text-align: center;
+	margin-left: 20px;
+	margin-top: -80px;
 }
 .header .header-nav .header-nav-item .search-keyword-list .keyword-item a{
 	width: 100%;
