--- a/mi/css/fuwuzsc.css
+++ b/mi/css/fuwuzsc.css
@@ -256,9 +256,9 @@
 	height: 1500px;
 }
 .main .top{
-width: 100%;
-height: 750px;
-background: #fff;
+	width: 100%;
+	height: 750px;
+	background: #fff;
 }
 .main .top h2{
 	width: 100%;
@@ -302,8 +302,8 @@ background: #fff;
 	font-size: 12px;
 }
 .main .bottom{
-width: 100%;
-height: 750px;
+	width: 100%;
+	height: 750px;
 }
 .main .bottom .box{
 	width: 24%;
@@ -315,13 +315,10 @@ height: 750px;
 .main .bottom .box .list-name{
 	color: #666666;
 	font-size: 16px;
-	padding-bottom: 10px
+	padding-bottom: 20px;
 }
 .main .bottom img{
 	background: #fff;
-}
-.main .bottom .box .list-name{
-	margin-bottom: 20px;
 }
 .service{
 	width: 100%;
@@ -329,7 +326,53 @@ height: 750px;
 }
 .box1{
 	height: 500px;
-	background-color: orange;
+	position: relative;
+}
+.service .box1 h2{
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	font-size: 30px;
+	color: #666666;
+	text-align: center;
+}
+.service .box1 .left: {
+	width: 600px;
+	height: 360px;
+	border: 1px solid #000;
+}
+.service .box1 .left img{
+	width: 50%;
+}
+.service .box1 .right{
+	width: 50%;
+	height: 316px;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+.service .box1 .right h3{
+	font-size: 20px;
+	color: #000000;
+	text-align: center;
+	margin-top: 70px;
+}
+.service .box1 .right .desc{
+	font-size: 16px;
+	color: #666666;
+	margin-top: 25px;
+}
+.service .box1 .right .content{
+	height: 55px;
+	width: 60px;
+	text-align: center;
+	float: left;
+	margin-right: 15px;
+}
+.service .box1 .right a{
+	display: block;
+	font-size: 12px;
+	color: #858585;
 }
 .box2{
 	height: 500px;
