--- a/mi/css/servicejrx.css
+++ b/mi/css/servicejrx.css
@@ -366,6 +366,59 @@
 	font-size: 16px;
 	line-height: 28px;
 }
+.index-center .left{
+	float: left;
+	width: 614px;
+	height: 360px;
+}
+.index-center .left img{
+	width: 100%;
+	height: 100%;
+}
+.index-center .right{
+	float: right;
+	width: 612px;
+	height: 360px;
+	text-align: center;
+	background: #fff;
+}
+.index-center .right p{
+	margin: 65px auto 15px;
+	font-size: 20px;
+	color: #000;
+}
+.index-center .right span{
+	color: #000;
+	font-size: 16px;
+	opacity: 0.6;
+}
+.index-center .right .icon-wrap{
+	width: 500px;
+	margin: 35px auto 50px;
+	opacity: 0.5;
+	text-align: center;
+}
+.index-center .right dl{
+	float: left;
+	width: 100px;
+}
+.index-center .right dl dd{
+	margin-bottom: 5px;
+}
+.index-center .right dl dt{
+	font-size: 14px;
+}
+.index-center .right a{
+	width: 158px;
+	height: 38px;
+	font-size: 16px;
+	transition: all 0.3s;
+}
+.index-center .right a:hover{
+	color: #ff6700;
+}
+
+
 
 .footer{
 	height: 300px;
