--- a/mi/css/fuwuzsc.css
+++ b/mi/css/fuwuzsc.css
@@ -1,3 +1,22 @@
+/* 标签*/
+.flag{
+		position: absolute;
+		top: 0px;
+		left: 50%;
+		width: 66px;
+		height: 22px;
+		line-height: 22px;
+		color: #fff;
+		font-size: 12px;
+		border: 1px solid #ff6700;
+		text-align: center;	
+		z-index: 100;
+		text-align: center;
+	}
+	.new-flag{
+		background: #fff;
+		color: #ff6700;
+	}
 .top{
 	background: #333333;
 	font-size: 12px;
@@ -48,6 +67,7 @@
 }
 .header{
 	height: 100px;
+	position: relative;
 }
 .header .logo{
 	float: left;
@@ -76,10 +96,96 @@
 	height: 100px;
 	line-height: 100px;
 	margin-right: 20px;
+	/*position: relative;*/
+}
+.header .header-nav .header-nav-item:hover .search-keyword-list{
+	display: block;
 }
 .header .header-nav .header-nav-item a{
 	font-size: 16px;
 	color: #333;
+}
+.header .header-nav .header-nav-item .search-keyword-list{
+	width: 247px;
+	display: none;
+	position: absolute;
+	top: 100px;
+	left: 180px;
+	width: 247px;
+	border: 1px solid #ff6700;
+	box-sizing: border-box;
+	background: #fff;
+	font-size: 12px;
+	z-index: 2
+}
+.header .header-nav .header-nav-item .box{
+	background-color: #fff;
+	height: 250px;
+	width: 1600px;
+	position: absolute;
+	top: 100px;
+	left: 0;
+	border-top: 1px solid #e0e0e0;
+	box-sizing: border-box;
+	font-size: 12px;
+	z-index: 99;
+	display: none;
+}
+.header .header-nav .header-nav-item:hover .box{
+	display: block;
+}
+.header .header-nav .header-nav-item .box .box1{
+	width: 150px;
+	position: relative;
+	float: left;
+	margin-left: 50px;
+}
+.header .header-nav .header-nav-item .box .box1:first-child{
+	margin-left: 215px
+}
+.header .header-nav .header-nav-item .box .box1 .box2{
+	width: 205px;
+	height: 113px;
+	margin-top: 35px;
+	border-right: 1px solid #e0e0e0;
+}
+.header .header-nav .header-nav-item .box .box1 .box2 img{
+	width: 205px;
+	height: 113px;
+}
+.header .header-nav .header-nav-item .box .box1 .product-name{
+	font-size: 12px;
+	color: #333333;
+	margin-left: 20px;	
+	text-align: center;
+}
+.header .header-nav .header-nav-item .box .box1 .product-price{
+	font-size: 12px;
+	color: #ff6700;
+	text-align: center;
+	margin-left: 20px;
+	margin-top: -80px;
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword-item a{
+	width: 100%;
+	height: 30px;
+	box-sizing: border-box;
+	padding: 10px 20px;
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword-item:hover{
+	background-color: #ff6700;
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword-item .iconfont{
+	float: right;
+	color: #757575;
+}
+.header .header-nav .header-nav-item .search-keyword-list .keyword{
+	font-size: 16px;
+	color: #757575;
+}
+.header .header-nav .header-nav-item .search-keyword-list:foucs{
+	display: block;
+	border-color: #ff6700;
 }
 .header .header-nav .header-nav-item a:hover{
 	color: #ff6700;
@@ -204,7 +310,7 @@
 }
 .logo .content{
 		list-style: none;
-		width: 2466px;
+		width: 3699px;
 		height: 300px;
 		float: left;
 		animation: sport 5s linear infinite 3s;
@@ -349,39 +455,200 @@
 	height: 316px;
 	position: absolute;
 	right: 0;
-	top: 0;
+	top: 20px;
+	text-align: center;
 }
 .service .box1 .right h3{
 	font-size: 20px;
 	color: #000000;
-	text-align: center;
-	margin-top: 70px;
+	
+	margin-top: 100px;
 }
 .service .box1 .right .desc{
 	font-size: 16px;
 	color: #666666;
 	margin-top: 25px;
+	margin-left: 40px;
 }
 .service .box1 .right .content{
 	height: 55px;
 	width: 60px;
 	text-align: center;
 	float: left;
-	margin-right: 15px;
+	margin-left: 55px;
+	margin-top: 45px;
 }
 .service .box1 .right a{
 	display: block;
 	font-size: 12px;
 	color: #858585;
 }
+.service .box1 .right .list-name{
+	position: absolute;
+	bottom: -60px;
+	left: 270px;
+}
+.service .box1 .right .list-name:hover{
+	color: #ff6700;
+}
 .box2{
 	height: 500px;
-	background-color: skyblue;
+}
+.service .box2 h2{
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	font-size: 30px;
+	color: #666666;
+	text-align: center;
+
+}
+.service .box2 input{
+	width: 60%;
+	height: 25px;
+	text-align: center;
+	font-size: 16px;
+	float: left;
+	margin-top: 15px;
+	border: none;
+	margin-left: 50px;
+	outline: none;
+}
+.service .box2 .search-btn{
+	float: left;
+	height: 50px;
+	width: 50px;
+	line-height: 50px;
+	text-align: center;
+	margin-left: 150px;
+}
+.service .box2 .search-btn:hover{
+	background-color: #ff6700;
+	color: #fff;
+	cursor: pointer;
+}
+.service .box2 .item{
+	width: 175px;
+	height: 65px;
+}
+.service .box2  a{
+	float: left;
+}
+.service .header-nav{
+	float: left;
+	height: 100px;
+	width: 100%;
+}
+.service .header-nav .header-nav-item{
+	float: left;
+	width: 150px;
+	height: 100px;
+	line-height: 100px;
+	margin-right: 20px;
+}
+.service .header-nav .header-nav-item:first-child{
+	margin-left: 20px
+}
+.service .header-nav .header-nav-item .tp{
+	font-size: 16px;
+	color: #333;
+	text-align: center;
+	width: 150px;
+	height: 100px;
+	display: inline-block;
+	position: relative;
+}
+.service .header-nav .header-nav-item #active{
+	background-color: #ff6700;
+	color: #fff;
+}
+.service .header-nav .header-nav-item .tp:hover {
+	background-color: #ff6700;
+	color: #fff;
+}
+.service .header-nav .header-nav-item .a1{
+	width: 900px;
+	height: 200px;
+	position: absolute;
+	top: 2800px;
+	left: 350px;
+	font-size: 14px;
+	cursor: pointer;
+}
+.service .header-nav .header-nav-item .a1 p{
+	position: absolute;
+	bottom: 0;
+	left: 430px;
+	margin-bottom: -30px;
+	color: #767676;
+}
+.service .header-nav .header-nav-item .a1 p:hover{
+	color: #ff6700;
+}
+.service .header-nav .header-nav-item .a1 .a2 a{
+	width: 330px;
+	float: left;
+	color: #222222;
+	margin-top: -40px;
+	margin-left: 100px
+}
+.service .header-nav .header-nav-item .a1 .a2 a:hover{
+	color: #ff6700;
+}
+.service .header-nav .header-nav-item .a1 .d1{
+	width: 5px;
+	height: 5px;
+	float: left;
+	background-color: #e0e0e0;
+	margin-top: 50px;
+	margin-right: 10px;
+	border-radius: 50%;
 }
 .contact{
 	width: 100%;
-	height: 750px;
-	background-color: purple;
+}
+.contact h2{
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	font-size: 30px;
+	color: #666666;
+	text-align: center;
+}
+.contact .box{
+	width: 100%;
+	height: 500px;
+	position: relative;
+}
+.contact .box .box1{
+	width: 360px;
+	height: 250px;
+	float: left;
+	line-height: 250px;
+	text-align: center;
+	margin-right: 20px;
+	margin-top: 10px;
+	transition: all 0.3s;
+}
+.contact .box .box1:hover{
+	transform: translateY(-2px);
+	box-shadow: 0 10px 30px rgba(0,0,0,0.2)
+}
+.contact .box .box1:first-child{
+	margin-left: 20px;
+}
+.contact .box .box1:nth-child(4){
+	margin-left: 20px;
+}
+.contact .box .box1 span{
+	
+}
+.contact .box .box1 p{
+	font-size: 12px;
+	color: #767676;
+	position: absolute;
+	bottom:-70px;
+	left: 50px;
 }
 .end{
 	height: 300px;
